# Toxic-TweetTagger

./: .dvcignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  artifacts.dvc  config.yaml  dvc.yaml  experiment-02.ipynb  ini_setup.sh  locustfile.py  params.yaml  project_structure.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_app.py  run_backend.py  run_frontend.py  runapp.py  setup.cfg  setup.py  template.py  tox.ini  toxic_tweet_tagger_structure_2026-02-11_19-47.txt  vercel.json
.github/workflows/: ci.yaml  release.yaml
app/: app.py  requirements.txt  schema.py  services.py  utils.py
configs/: config.yaml  params.yaml
frontend/: app.py  requirements.txt  utils.py
frontend/static/: script.js  style.css
frontend/templates/: about.html  index.html
frontend_app/: app.py  utils.py
hf_serve_api/: Dockerfile  README.md  requirements.txt
hf_serve_api/main/: db_logging.py  inference.py  schema.py  utils.py  workers.py
mlruns/0/: meta.yaml
model_artifacts/: model_meta.txt  vectorizer_meta.txt
models/: Tfidf.joblib  model_meta.txt  tfidf_vectorizer.joblib  vectorizer_meta.txt
notebooks/: data exploration.ipynb  dl_experiments.ipynb  experiment-01.ipynb  extras1.ipynb  extras2..ipynb  model experiments.ipynb  test.ipynb  tuning xgboost.ipynb
operations/: promote_model.py
reports/: .gitignore  data_drift.json  experiment.json  metrics.json  note.txt  report.txt
src/: .dockerignore  Dockerfile  README.md  main.py  start.sh
src/app/: main.py  requirements.txt
src/app/api/: api_routes.py  dependencies.py  schemas.py
src/app/middleware/: __init__.py
src/app/model/: MLmodel  conda.yaml  python_env.yaml  python_model.pkl  registered_model_meta  requirements.txt
src/app/monitoring/: http_metrics.py  service_metrics.py
src/app/services/: explainer.py  feedback.py  inference.py
src/app/workers/: __init__.py
src/components/: __init__.py  data_ingestion.py  data_preprocessing.py  data_validation.py  feature_engineering.py  model_evaluation.py  model_training.py  register_model.py
src/config/: configuration.py
src/connection/: mongo_client.py
src/constant/: constants.py
src/constants/: constants.py
src/core/: config_entity.py  configuration.py  constants.py  logger.py
src/db/: db_logging.py  mongo_client.py
src/entity/: config_entity.py
src/exception/: app_exception.py
src/operations/: load_model.py  promote_model.py  register_model.py  serve_model.py
src/pipeline/: ml_pipeline.py
src/script/: model_wrapper.py
src/utils/: __init__.py  common.py
static/: style.css
templates/: about.html  index.html
tests/: test_app.py  test_model.py
tests/integration_test/: test_api.py  test_app.py
tests/load_test/: locust.py  test_comments.txt
tests/unit_test/: test_feedback_service.py  test_model.py  test_text_preprocessing.py
tests/unit_tests/: test_inference_service.py
(+7 files in other folders)
