[metadata]
name = Toxic-TweetTagger
version = 0.1.0
author = Subinoy Bera
author_email = subinoyberadgp@gmail.com
description = End to end Hate-Tweet detection automation with MLOps implementation
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
url = https://github.com/SubinoyBera/Toxic-TweetTagger
classifiers =
    Topic :: Engineering/Automation :: ML/MLOps
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent


[options]
packages = find:
package_dir =
    = src
python_requires = >=3.11

install_requires =
    numpy==2.2.6
    pandas==2.3.1
    scipy==1.13.1
    scikit-learn==1.7.0
    xgboost==3.0.2
    nltk==3.9.1
    python-box==7.3.2
    ensure==1.0.4
    PyYAML==6.0.2
    dvc==3.61.0
    lime==0.2.0.1
    evidently==0.7.12
    mlflow==2.22.1
    dagshub==0.5.10
    fastapi==0.116.1
    gunicorn==23.0.0
    pydantic==2.11.7
    tqdm==4.67.1
    requests==2.32.4
    pymongo==4.14.0
    pytest==8.4.1
    tox==4.11.3
    
dev =
    docker==7.1.0
    matplotlib==3.10.3
    python-dotenv==1.1.1
    tensorflow==2.17.1
    ipykernel==6.29.5


[options.packages.find]
where = src


[options.extras_require]
testing =
    pytest >= 8.0.0
    black >= 25.0.0
    flake8 >= 6.0.0
    mypy >= 1.5.0
    tox >= 4.0.0